--- a/app/views/appeal/before-you-start/v19/planning/application-date.html
+++ b/app/views/appeal/before-you-start/v19/planning/application-date.html
@@ -2,7 +2,20 @@
 
 {% set title = 'What date did you submit your planning application?' %}
 
+{% set prototypeLinks = [
+  {
+    href: '?debug=true',
+    text: 'Debug stuff'
+  } if not data['debug'],
+  {
+    href: '?debug=',
+    text: 'Hide debugging'
+  } if data['debug']
+] %}
+
 {% block questions %}
+
+	{% include "../includes/debugger.html" %}
 
 	<span class="govuk-caption-l">
 		Before you start
