--- a/app/views/appeal/before-you-start/aad/v3/partial-success/check.html
+++ b/app/views/appeal/before-you-start/aad/v3/partial-success/check.html
@@ -51,7 +51,7 @@
                 {
                   href: "application-ref",
                   text: "Change",
-                  visuallyHiddenText: "applciation number"
+                  visuallyHiddenText: "application number"
                 }
               ]
             }
@@ -102,7 +102,7 @@
                 {
                   href: "decision-date",
                   text: "Change",
-                  visuallyHiddenText: "contact details"
+                  visuallyHiddenText: "date of decision"
                 }
               ]
             }
