--- a/app/views/appeal/before-you-start/aad/v4/not-eligible/not-eligible.html
+++ b/app/views/appeal/before-you-start/aad/v4/not-eligible/not-eligible.html
@@ -11,7 +11,9 @@
   <p class="govuk-body">
     Your deadline to appeal has passed.
   </p>
-
+  <p class="govuk-body">
+  You can no longer submit this appeal, but you can start a different appeal, if you have one.
+  </p>
   <p class="govuk-body">
     Your deadline was 26 March 2025. You had 12 weeks from the date of the decision to appeal. This is 12 weeks from the decision date.
   </p>
