Updates to expedited appeal

--- a/app/views/appeal/s78e/v2/prepare-appeal/reasons-for-appeal.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/reasons-for-appeal.html
@@ -57,7 +57,7 @@
       isPageHeading: true
     },
     hint: {
-      text: "Your must list each reason separately, using bullet points. Enter between 10 and 250 words."
+      text: "Your must list each reason separately. Enter between 10 and 250 words."
     }
   }) }}
 
