Updates to Written representatins part 1

--- a/app/views/appeal/s78e/v2/prepare-appeal/significant-changes.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/significant-changes.html
@@ -1,4 +1,4 @@
-{% extends '_layouts/layout-pins.html' %}
+{% extends '_layouts/layout-appellant-main.html' %}
 
 {% set title = 'Have there been any significant changes that would affect the application?' %}
 
@@ -110,7 +110,7 @@
 	    },
 	    {
 	      value: "None of these",
-	      text: "None of these",
+	      text: "There have been no significant changes",
 	      behaviour: "exclusive"
 	    }
 	  ]
