--- a/app/views/appeal/enforcement/v1-statement/enter-statement.html
+++ b/app/views/appeal/enforcement/v1-statement/enter-statement.html
@@ -62,7 +62,7 @@
             classes: "govuk-label--m"
           },
           hint: {
-            text: "You must list each reason separately, using bullet points."
+            text: "You must list each reason on a separate line."
           }
         }) }}
 
