Fixes for WR part 1 case

--- a/app/views/appeal/s78e/v2/prepare-appeal/major-or-minor-development.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/major-or-minor-development.html
@@ -66,9 +66,9 @@
     },
     items: [
       {
-        html: 'Major developement',
-        value: 'Major developement',
-        checked: checked('major-or-minor-development','Major developement')
+        html: 'Major development',
+        value: 'Major development',
+        checked: checked('major-or-minor-development','Major development')
       },
       {
         html: 'Minor development',
