--- a/app/views/appeal/enforcement/index.html
+++ b/app/views/appeal/enforcement/index.html
@@ -36,8 +36,8 @@ href: '/#appeal'
     <h2 class="govuk-heading-m">
       Latest version
       {{govukTag({
-          text: "Ready for research",
-          classes: "govuk-!-margin-left-2 govuk-tag--lght-blue"
+          text: "In progress",
+          classes: "govuk-!-margin-left-2 govuk-tag--yellow"
       })}}
     </h2>
 
