--- a/app/views/appeal/enforcement/v4/prepare-appeal/appeal-decision-date.html
+++ b/app/views/appeal/enforcement/v4/prepare-appeal/appeal-decision-date.html
@@ -5,7 +5,8 @@
 {% block questions %}
 
 {{ govukDateInput({
-  id: "date",
+  idPrefix: 'appeal-decision-date',
+  name: 'appeal-decision-date',
   fieldset: {
     legend: {
       text: title,
