--- a/app/views/appeal/enforcement/v4/prepare-appeal/submit-planning-application.html
+++ b/app/views/appeal/enforcement/v4/prepare-appeal/submit-planning-application.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Did you submit a planning application for the development on the enforcement notice?' %}
+{% set title = 'Did anyone submit a planning application and pay the correct fee?' %}
 
 {% block questions %}
 
