--- a/app/views/appeal/enforcement/v4/task-list__grounds.html
+++ b/app/views/appeal/enforcement/v4/task-list__grounds.html
@@ -40,15 +40,13 @@
         ]
       }
     },
-  
+
     {
       key: { text: "Grounds of appeal" },
-
-      value: {
-        html: 'Ground (b)'
-      }
-      if data['grounds-complete'] else
-      { html: '<span class="govuk-hint">Not started</span>' },
+      value:
+        { html: data['grounds'] or 'Ground (b)' }
+        if data['grounds-complete'] else 
+        { html: '<span class="govuk-hint">Not started</span>' },
       actions: {
         items: [
           { href: 'prepare-appeal/grounds?cya=true', html: 'Change' }
@@ -58,7 +56,6 @@
       }
     },
   
-
       {
         key: { text: "Facts for ground (b)" },
         value:
@@ -118,13 +115,13 @@
             { href: 'prepare-appeal/fee-check', html: 'Answer' }
           ]
         }
-      }, 
+      } if data['grounds'] and 'groundA' in data['grounds'],
 
       {
         key: { text: "Application fee receipt" },
         value:
           { html: data['fee-receipt'] or '<a href="#">ground-b-doc.pdf</a>' }
-          if data['fee-receiptfee-upload-complete'] else
+          if data['fee-receipt-complete'] else
           { html: '<span class="govuk-hint">Not started</span>' },
         actions: {
           items: [
@@ -133,7 +130,204 @@
             { href: 'prepare-appeal/fee-upload', html: 'Answer' }
           ]
         }
-      } if data['fee-check'] == 'Yes'
+      } if data['fee-check'] == 'Yes',
+
+      {
+        key: { text: "Was the application for all or part of the development?" },
+        value:
+          { html: data['all-or-part'] or 'All of the development' }
+          if data['all-or-part-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/all-or-part?cya=true', html: 'Change' }
+            if data['all-or-part-complete'] else
+            { href: 'prepare-appeal/all-or-part', html: 'Answer' }
+          ]
+        }
+      } if data['grounds'] and 'groundA' in data['grounds'],
+
+      {
+        key: { text: "Application reference number" },
+        value:
+          { html: data['application-reference'] or 'APP/298840/H28S' }
+          if data['application-reference-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/application-reference?cya=true', html: 'Change' }
+            if data['application-reference-complete'] else
+            { href: 'prepare-appeal/application-reference', html: 'Answer' }
+          ]
+        }
+      } if data['grounds'] and 'groundA' in data['grounds'],
+
+      {
+        key: { text: "Application date" },
+        value:
+          { html: '20 November 2025' }
+          if data['application-date-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/application-date?cya=true', html: 'Change' }
+            if data['application-date-complete'] else
+            { href: 'prepare-appeal/application-date', html: 'Answer' }
+          ]
+        }
+      } if data['grounds'] and 'groundA' in data['grounds'],
+
+      {
+        key: { text: "Description of development" },
+        value:
+        { html: data['description-detail'] or 'This is my description...' }
+        if data['description-detail-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/description-of-land?cya=true', html: 'Change' }
+            if data['description-detail-complete'] else
+            { href: 'prepare-appeal/description-of-land', html: 'Answer' }
+          ]
+        }
+      } if data['grounds'] and 'groundA' in data['grounds'],
+
+      {
+        key: { text: "Did the local planning authority change the description of development?" },
+        value:
+        { html: data['application-desc-changed'] or 'This is my description...' }
+        if data['application-desc-changed-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/application-desc-changed?cya=true', html: 'Change' }
+            if data['application-desc-changed-complete'] else
+            { href: 'prepare-appeal/application-desc-changed', html: 'Answer' }
+          ]
+        }
+      } if data['grounds'] and 'groundA' in data['grounds'],
+
+      {
+        key: { text: "Application decision" },
+        value:
+        { html: data['granted-or-refused'] or 'Refused' }
+        if data['granted-or-refused-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/granted-or-refused?cya=true', html: 'Change' }
+            if data['granted-or-refused-complete'] else
+            { href: 'prepare-appeal/granted-or-refused', html: 'Answer' }
+          ]
+        }
+      } if data['grounds'] and 'groundA' in data['grounds'],
+
+      {
+        key: { text: "Decision letter date" },
+        value:
+          { html: '20 November 2025' }
+          if data['decision-letter-date-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/decision-letter-date?cya=true', html: 'Change' }
+            if data['decision-letter-date-complete'] else
+            { href: 'prepare-appeal/decision-letter-date', html: 'Answer' }
+          ]
+        }
+      } if data['granted-or-refused'] == 'Granted with conditions' or data['granted-or-refused'] == 'Refused',
+
+      {
+        key: { text: "Did you appeal the decision?" },
+        value:
+        { html: data['appeal-decision'] or 'No' }
+        if data['appeal-decision-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/appeal-decision?cya=true', html: 'Change' }
+            if data['appeal-decision-complete'] else
+            { href: 'prepare-appeal/appeal-decision', html: 'Answer' }
+          ]
+        }
+      } if data['granted-or-refused'] == 'Granted with conditions' or data['granted-or-refused'] == 'Refused',
+
+      {
+        key: { text: "When did you receive an appeal decision?" },
+        value:
+          { html: '20 November 2025' }
+          if data['appeal-decision-date-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/appeal-decision-date?cya=true', html: 'Change' }
+            if data['appeal-decision-date-complete'] else
+            { href: 'prepare-appeal/appeal-decision-date', html: 'Answer' }
+          ]
+        }
+      } if data['appeal-decision'] == 'Yes',
+
+      {
+        key: { text: "What date was the decision due?" },
+        value:
+          { html: '20 November 2025' }
+          if data['decision-due-date-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/decision-due-date?cya=true', html: 'Change' }
+            if data['decision-letter-due-complete'] else
+            { href: 'prepare-appeal/decision-due-date', html: 'Answer' }
+          ]
+        }
+      } if data['granted-or-refused'] == 'I have not received a decision',
+
+      {
+        key: { text: "Facts for ground (a)" },
+        value:
+          { html: data['ground-a-reasons'] or 'These are my facts for ground a' }
+          if data['ground-a-reasons-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/facts-a?cya=true', html: 'Change' }
+            if data['ground-a-reasons-complete'] else
+            { href: 'prepare-appeal/facts-a', html: 'Answer' }
+          ]
+        }
+      } if data['grounds'] and 'groundA' in data['grounds'],
+
+      {
+        key: { text: "Do you have any ground (a) supporting documents?" },
+        value:
+          { html: data['supporting-check'] or 'No' }
+          if data['supporting-check-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/supporting-check?cya=true', html: 'Change' }
+            if data['supporting-check-complete'] else
+            { href: 'prepare-appeal/supporting-check', html: 'Answer' }
+          ]
+        }
+      } if data['grounds'] and 'groundA' in data['grounds'],
+
+
+      {
+        key: { text: "Ground (a) supporting documents" },
+        value:
+          { html: data['_supporting-docs'] or '<a href="#">ground-a-doc.pdf</a>' }
+          if data['_supporting-docs-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'prepare-appeal/supporting-upload?cya=true', html: 'Change' }
+            if data['_supporting-docs-complete'] else
+            { href: 'prepare-appeal/supporting-upload', html: 'Answer' }
+          ]
+        }
+      } if data['supporting-check'] == 'Yes'
+      
 
       ]
   }) }}
