Written representations part 1 LPA questionnaire

--- a/app/views/manage/questionnaire/v15/appeal-process/significant-changes.html
+++ b/app/views/manage/questionnaire/v15/appeal-process/significant-changes.html
@@ -110,7 +110,7 @@
 	    },
 	    {
 	      value: "None of these",
-	      text: "None of these",
+	      text: "There have been no significant changes",
 	      behaviour: "exclusive"
 	    }
 	  ]
