--- a/app/views/manage/questionnaire/v15/og-evidence/list-of-documents.html
+++ b/app/views/manage/questionnaire/v15/og-evidence/list-of-documents.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = "List what documents were used for your decision" %}
+{% set title = "What documents and plans did you use to make your decision?" %}
 
 {% block questions %}
 
@@ -16,7 +16,11 @@
       text: title,
       classes: "govuk-label--l",
       isPageHeading: true
+    },
+    hint: {
+      text: "Only include the most up-to-date versions of the documents you received"
     }
+
   }) }}
 
 {% endblock %}
