--- a/app/views/manage/questionnaire/v15/task-list__consultation.html
+++ b/app/views/manage/questionnaire/v15/task-list__consultation.html
@@ -97,7 +97,7 @@
       } if data['consultation-responses-check'] == 'Yes',
       {
         key: {
-          html: 'Representations from other parties'
+          html: 'Representations from other parties about the application'
         },
         value: {
           html: data['other-parties-check'] or 'No'
