--- a/app/views/manage/questionnaire-enf/v1/task-list__site-access.html
+++ b/app/views/manage/questionnaire-enf/v1/task-list__site-access.html
@@ -22,7 +22,7 @@
     rows: [
       {
         key: {
-          html: 'Might the inspector need access to the appellant’s land or property?'
+          html: 'Will the inspector need to enter a neighbour’s land or property?'
         },
         value: {
           html: 'Yes<br>'+data['site-entry__details'] if data['site-entry'] == 'Yes' else 'No'
