--- a/app/views/manage/questionnaire-enf/v1/task-list__notified.html
+++ b/app/views/manage/questionnaire-enf/v1/task-list__notified.html
@@ -1,6 +1,6 @@
 <li>
   <h2 class="app-task-list__section">
-    <span class="app-task-list__section-number">3. </span> Notifying relevant parties of the application
+    <span class="app-task-list__section-number">3. </span> Notifying relevant parties of the appeal
     {% if data['notified-completed'] == 'true' %}
       {{ govukTag({
         html: 'Completed'
